--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Simple Life by Free Website Templates</title>
+<title>Creation Lotus, the ultimate source for wellness creation products and services.</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <!--
@@ -24,7 +24,7 @@ $.localScroll();
 <body>
 	<div id="tooplate_wrapper">
 		<div id="tooplate_sidebar">
-			<div id="site_title"><a href="#">Simple Life<span>Free Website Templates</span></a></div>
+			<div id="site_title"><a href="#">Creation Lotus<span>Creation Lotus, the ultimate source for wellness creation products and services.</span></a></div>
 			<div id="tooplate_menu">
 				<ul>
 					<li><a href="#home" class="home"><span></span>Home</a></li>
@@ -36,20 +36,11 @@ $.localScroll();
 				<div class="cleaner"></div>
 			</div> <!-- END of -->
 			
-			<div id="twitter">
-				<h3>Twitter</h3>
-				<ul>
-					<li>Suspendisse at scelerisque urna. Aenean tincidunt massa ultricies. <a href="#">http://bit.ly/13IwZO</a></li>
-					<li>Cras rhoncus enim nec turpis mollis pellentesque. Donec at felis urna. <a href="#">http://bit.ly/Iuk00</a></li>					
-				</ul>
-				<p>Copyright © 2048 <a href="#">Company Name</a> <br />
-			    by <a href="http://www.tooplate.com/free-templates" target="_parent">Free Templates</a></p>
-			</div>
 		</div>
 		<div id="tooplate_main">
 			
 			<div id="home" class="main_box">
-				<h1>Welcome to Simple Life</h1>
+				<h1>Creation Lotus</h1>
 				<img src="images/tooplate_image_01.jpg" alt="image" class="img_frame img_float_l" />
 				<p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer varius consectetur arcu, ut fermentum sem adipiscing id.</em></p>
 				<p align="justify">Simple Life is free <a href="#">website template</a> for everyone. You may edit and apply this template for any purpose. Please tell your friends about <a href="#">tooplate</a> website. Thank you. Aliquam odio nibh, suscipit quis venenatis vitae, fringilla at quam. Proin turpis nibh, vestibulum non dignissim a, blandit at nulla. Curabitur vestibulum mattis sapien, id mollis arcu cursus vel. Nulla rutrum, risus eu elementum aliquet, ipsum risus venenatis enim, in viverra mi dui in sapien. Cras vulputate laoreet porta. In mi enim, pulvinar vitae vehicula vestibulum, fringilla quis risus. Fusce vel mi mi, ac mollis nisi. Mauris mollis fringilla molestie. Nunc a libero elit, at dignissim elit. </p>
